--- a/src/report/2-algorithms.Rmd
+++ b/src/report/2-algorithms.Rmd
@@ -1,9 +1,9 @@
 # Algorithms {#algorithms}
-In this section, we will discuss each algorithms used in details; for a more thorough explanation and elegant proofs for these algorithms, we highly recommend _What Is a Computer and What Can It Do?_ by Thomas O’Connell. 
+In this section, we will discuss each algorithms used in details; for a more thorough explanation and elegant proofs for these algorithms, we highly recommend chapter 8 of _What Is a Computer and What Can It Do?_ by Thomas O’Connell. 
 
 First, the standard <span style="font-variant:small-caps;">MaxValDP</span> algorithm (the vanilla flavor that we are all too familiar to hate) is really the most standard way we know to solve the Maximum 0-1 Knapsack problem. It attempts to construct in bottom-up manner a table of dimension $n \times B$, where each cell $Cell[i][j]$ gives the maximum value that can be achieved using item 1 to $i$ with budget $j$. After the computation process, the bottom right-most cell of the table gives us the optimal value. The running time for this algorithm is $\Theta(nB)$. 
 
-<span style="font-variant:small-caps;">Greedy</span> refers to the greedy 2-approximation algorithm that tackles the Maximum Fractional Knapsack version. As such, firstly, we sort the item in ascending order based on value/cost ratio. We continuously add items to the knapsack until it is full. In the end, we have to check the value of the most valuable item as there might be a case where we can actually just take this item instead. Here, we need to make an assumption that the budget is higher than the maximum cost of any item--_we have enforced this condition while generating the knapsack problem instance so we can safely make this assumption_. This algorithm's running time depends on the running time of the sorting step and thus, it is $\Theta(n\log{n})$.
+<span style="font-variant:small-caps;">Greedy</span> refers to the greedy 2-approximation algorithm that tackles the Maximum Fractional Knapsack version. As such, initially, we sort the item in descending order based on value/cost ratio. We continuously add items to the knapsack and substract their costs from the budget until adding the next item results in the remaining budget going below 0. In the end, we have to compare the total value of the items obtained greedily with the value of the most valuable item as there might be a case where we can actually just take this item instead and end up having a better total value. Here, we need to make an assumption that the budget is higher than the maximum cost of any item--_we have enforced this condition while generating the knapsack problem instance so we can safely make this assumption_. This algorithm's running time depends on the running time of the sorting step and thus, it is $\Theta(n\log{n})$.
 
 <span style="font-variant:small-caps;">MinCostDP</span> deals with the MinCost version of the Maximum 0-1 Knapsack problem. Instead of looking for the set of item whose total cost does not reach the budget and whose value is the maximum, this version looks for set of item whose total value does not fall below the target value and whose budget is the minimum. As such, it employs the same strategy as <span style="font-variant:small-caps;">MaxValDP</span>. First, it constructs in bottom-up manner a table of dimension $n \times nv_{max}$; hence the columns of this table lists out all possible values that different subsets of item can take. Each cell of the table, $Cell[i][j]$ gives the minimum budget required using item 1 to $i$ to achieve target value $j$. After the computation process, we scan through the bottom row of the table and find the cell with maximum column index whose value equals to the budget. The running time for this algorithm is $\Theta(n^2v_{max})$. As we can see, by changing the original problem slightly, we now put the burden to the running on the maximum value rather than the budget, like in <span style="font-variant:small-caps;">MaxValDP</span>. 
 
